fix: followers modal height, style fixes, truncate more display names

--- a/src/styles/userProfile.module.scss
+++ b/src/styles/userProfile.module.scss
@@ -7,3 +7,9 @@
         gap: var(--chakra-space-1);
     }
 }
+
+.followers {
+    & > div > div {
+        padding: 0 var(--chakra-space-4);
+    }
+}
